# grafana-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  glama.json  pyproject.toml  ruff.toml
grafana-mcp-server/src/grafana_mcp_server/: config.yaml  mcp_server.py  stdio_server.py  test_grafana_connection.py
grafana-mcp-server/src/grafana_mcp_server/processor/: grafana_processor.py
src/grafana_mcp_server/: config.yaml  mcp_server.py
src/grafana_mcp_server/processor/: grafana_processor.py
src/grafana_mcp_server/tests/: conftest.py  utils.py
src/grafana_mcp_server/tests/clients/: grafana.py  openai.py
src/grafana_mcp_server/tests/tools/: test_grafana_processor.py  test_mcp_server_tools.py  test_openai_client.py
tests/: conftest.py  utils.py
tests/clients/: grafana.py  openai.py
tests/tools/: test_grafana_processor.py  test_mcp_server_tools.py  test_openai_client.py
